test/snapshots/snapshots__ts_pattern.snap
---
source: test/fixtures.rs
expression: output
---
README.md
    40→## About
    48→## Features
    59→## What is Pattern Matching?
    67→## Installation
    87→## Want to become a TypeScript Expert?
    91→# Documentation
   128→## Sandbox examples
   139→## Getting Started
   415→## API Reference
   742→## Patterns
  1405→## `P.string` predicates
  1500→## `P.number` and `P.bigint` predicates
  1621→## Types
  1766→## Inspirations

jsr.json
     2→  "name": "@gabriel/ts-pattern",
     3→  "version": "5.9.0",
     4→  "exports": {
     5→    ".": "./src/index.ts",
     6→    "./types": "./src/index.ts",
     7→    "./package.json": "./package.json"
     8→  }
     9→}

src/internals/helpers.ts
     7→import * as symbols from './symbols';
     8→import { SelectionType } from '../types/FindSelected';
     9→import { Pattern, Matcher, MatcherType, AnyMatcher } from '../types/Pattern';
    12→export const isObject = (value: unknown): value is Object =>
    16→export const isMatcher = (
    24→const isOptionalPattern = (
    32→export const matchPattern = (
   120→export const getSelectionKeys = (pattern: any): string[] => {
   132→export const flatMap = <a, b>(

src/internals/symbols.ts
     2→ * Symbols used internally within ts-pattern to construct and discriminate
      →…
    16→export const matcher …
    17→export type matcher …
    19→export const unset …
    20→export type unset …
    22→export const isVariadic …
    23→export type isVariadic …
    26→export const anonymousSelectKey …
    27→export type anonymousSelectKey …
    29→export const override …
    30→export type override …

src/errors.ts
     2→ * Error when the given input value does not match any included pattern
     3→ * and .exhaustive() was specified
     5→export class NonExhaustiveError …
     6→  constructor(public input: unknown) {

src/index.ts

src/is-matching.ts
     7→ * This constraint allows using additional properties
      →…
    11→type PatternConstraint …
    53→export function isMatching …

src/match.ts
     7→type MatchState …
    11→const unmatched …
    17→ * `match` creates a **pattern matching expression**.
      →…
    32→export function match<const input, output = symbols.unset>(
    33→  value: input
    34→): Match<input, output> {
    39→ * This class represents a match expression. It follows the
      →…
    47→class MatchExpression …
    48→  constructor …
    50→  with …
    94→  when …
   110→  otherwise …
   115→  exhaustive …
   120→  run …
   124→  returnType …
   128→  narrow …
   133→function defaultCatcher …

src/patterns.ts
    68→ * A `Matchable` is an object implementing
      →…
    81→export type unstable_Matchable …
    88→ * A `Matcher` is an object with `match` function, which
      →…
   100→export type unstable_Matcher …
   107→ * `P.infer<typeof somePattern>` will return the type of the value
      →…
   116→export type infer …
   119→ * `P.narrow<Input, Pattern>` will narrow the input type to only keep
      →…
   131→export type narrow …
   136→function chainable …
   148→const variadic …
   165→function arrayChainable …
   178→ * `P.optional(subpattern)` takes a sub pattern and returns a pattern which matches if the
      →…
   187→export function optional<
   188→  input,
   189→  const pattern extends unknown extends input
   190→    ? UnknownValuePattern
   191→    : Pattern<input>
   192→>(pattern: pattern): Chainable<OptionalP<input, pattern>, 'optional'> {
   217→type UnwrapArray …
   219→type UnwrapSet …
   221→type UnwrapMapKey …
   223→type UnwrapMapValue …
   225→type UnwrapRecordKey …
   227→type UnwrapRecordValue …
   229→type WithDefault …
   246→export function array …
   299→export function set …
   336→const setEvery …
   362→export function map …
   410→const mapEvery …
   445→export function record …
   505→const recordEvery …
   518→ * `P.intersection(...patterns)` returns a pattern which matches
      →…
   536→export function intersection<
   537→  input,
   538→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   539→>(...patterns: patterns): Chainable<AndP<input, patterns>> {
   560→ * `P.union(...patterns)` returns a pattern which matches
      →…
   572→export function union<
   573→  input,
   574→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   575→>(...patterns: patterns): Chainable<OrP<input, patterns>> {
   600→ * `P.not(pattern)` returns a pattern which matches if the sub pattern
      →…
   611→export function not<
   612→  input,
   613→  const pattern extends Pattern<input> | UnknownValuePattern
   614→>(pattern: pattern): Chainable<NotP<input, pattern>> {
   646→export function when …
   696→export function select …
   734→function isUnknown …
   738→function isNumber …
   742→function isString …
   746→function isBoolean …
   750→function isBigInt …
   754→function isSymbol …
   758→function isNullish …
   762→function isNonNullable …
   766→type AnyConstructor …
   768→function isInstanceOf …
   774→ * `P.any` is a wildcard pattern, matching **any value**.
      →…
   782→export const any …
   785→ * `P.unknown` is a wildcard pattern, matching **unknown value**.
      →…
   793→export const unknown …
   796→ * `P._` is a wildcard pattern, matching **any value**.
      →…
   805→export const _ …
   817→const startsWith = <input, const start extends string>(
   831→const endsWith = <input, const end extends string>(
   845→const minLength = <const min extends number>(min: min) =>
   857→const length = <const len extends number>(len: len) =>
   869→const maxLength = <const max extends number>(max: max) =>
   881→const includes = <input, const substr extends string>(
   895→const regex = <input, const expr extends string | RegExp>(
   900→const stringChainable …
   920→ * `P.string` is a wildcard pattern, matching any **string**.
      →…
   928→export const string …
   940→const between = <input, const min extends number, const max extends number>(
   955→const lt = <input, const max extends number>(
   969→const gt = <input, const min extends number>(
   983→const lte = <input, const max extends number>(
   997→const gte = <input, const min extends number>(
  1011→const int = <input>(): GuardExcludeP<input, number, never> =>
  1023→const finite = <input>(): GuardExcludeP<input, number, never> =>
  1035→const positive = <input>(): GuardExcludeP<input, number, never> =>
  1047→const negative = <input>(): GuardExcludeP<input, number, never> =>
  1050→const numberChainable …
  1067→ * `P.number` is a wildcard pattern, matching any **number**.
      →…
  1075→export const number …
  1087→const betweenBigInt = <
  1106→const ltBigInt = <input, const max extends bigint>(
  1120→const gtBigInt = <input, const min extends bigint>(
  1134→const lteBigInt = <input, const max extends bigint>(
  1148→const gteBigInt = <input, const min extends bigint>(
  1162→const positiveBigInt = <input>(): GuardExcludeP<input, bigint, never> =>
  1174→const negativeBigInt = <input>(): GuardExcludeP<input, bigint, never> =>
  1177→const bigintChainable …
  1194→ * `P.bigint` is a wildcard pattern, matching any **bigint**.
      →…
  1201→export const bigint …
  1204→ * `P.boolean` is a wildcard pattern, matching any **boolean**.
      →…
  1211→export const boolean …
  1214→ * `P.symbol` is a wildcard pattern, matching any **symbol**.
      →…
  1221→export const symbol …
  1224→ * `P.nullish` is a wildcard pattern, matching **null** or **undefined**.
      →…
  1231→export const nullish …
  1234→ * `P.nonNullable` is a wildcard pattern, matching everything except **null** or **undefined**.
      →…
  1241→export const nonNullable …
  1244→ * `P.instanceOf(SomeClass)` is a pattern matching instances of a given class.
      →…
  1251→export function instanceOf<T extends AnyConstructor>(
  1252→  classConstructor: T
  1253→): Chainable<GuardP<unknown, InstanceType<T>>> {
  1274→export function shape …

src/types/BuildMany.ts
     4→export type BuildMany …
    11→type BuildOne …
    19→export type SetDeep …

src/types/DeepExclude.ts
     3→export type DeepExclude …

src/types/DistributeUnions.ts
    18→ * DistributeMatchingUnions takes two arguments:
      →…
    41→export type DistributeMatchingUnions …
    46→export type FindUnionsMany …
    63→ * The reason we don't look further down the tree with lists,
      →…
    80→export type FindUnions …
   174→export type ArrayToVariadicUnion …
   183→export type Distribute …

src/types/ExtractPreciseValue.ts
    13→export type ExtractPreciseValue …
    81→type ExtractPreciseArrayValue …

src/types/FindSelected.ts
    11→type SelectionsRecord …
    13→export type None …
    16→export type Some …
    21→export type SelectionType …
    24→type MapOptional …
    31→type MapList …
    38→type ReduceFindSelectionUnion …
    47→type FindSelectionUnionInArray …
    96→export type FindSelectionUnion …
   159→export type SeveralAnonymousSelectError …
   165→export type MixedNamedAndAnonymousSelectError …
   174→export type SelectionToArgs …
   185→export type Selections …
   191→export type FindSelected …

src/types/InvertPattern.ts
    29→type OptionalKeys …
    39→type ReduceUnion …
    47→type ReduceIntersection …
    55→type InvertArrayPattern …
   102→ * ### InvertPatternInternal
      →…
   106→export type InvertPattern …
   110→type InvertPatternInternal …
   180→export type ReduceIntersectionForExclude …
   192→export type ReduceUnionForExclude …
   204→type ExcludeIfExists …
   231→type InvertArrayPatternForExclude …
   301→ * ### InvertPatternForExclude
   303→export type InvertPatternForExclude …
   307→type InvertPatternForExcludeInternal …

src/types/IsMatching.ts
    12→type IsMatchingTuple …
    26→type IsMatchingArray …
    57→export type IsMatching …

src/types/Match.ts
     8→export type PickReturnValue …
    10→interface NonExhaustiveError …
    14→interface TSPatternError …
    19→ * #### Match
      →…
    22→export type Match …
   245→type DeepExcludeAll …
   251→type MakeTuples …
   261→type Exhaustive …

src/types/Pattern.ts
     7→export type MatcherType …
    23→export type MatcherProtocol …
    38→export type MatchResult …
    44→ * A `Matcher` is an object implementing the match
      →…
    50→export interface Matcher …
    60→  [matcher](): MatcherProtocol<
    71→type PatternMatcher …
    74→export type MatchedValue …
    79→export type AnyMatcher …
    81→type UnknownMatcher …
    83→export type CustomP …
    94→export type ArrayP …
    96→export type RecordP …
   102→export type OptionalP …
   104→export type MapP …
   106→export type SetP …
   108→export type AndP …
   110→export type OrP …
   112→export type NotP …
   114→export type GuardP …
   116→export type GuardExcludeP …
   124→export type SelectP …
   130→export type AnonymousSelectP …
   132→export interface Override …
   136→export type UnknownProperties …
   138→export type UnknownValuePattern …
   147→ * `Pattern<a>` is the generic type for patterns matching a value of type `a`. A pattern can be any (nested) javascript value.
      →…
   157→export type Pattern …
   161→type KnownPattern …
   163→type KnownPatternInternal …
   174→type ObjectPattern …
   180→type ArrayPattern …
   190→export type UnknownPattern …
   191→export type StringPattern …
   192→export type NumberPattern …
   193→export type BooleanPattern …
   194→export type BigIntPattern …
   195→export type SymbolPattern …
   196→export type NullishPattern …
   201→export type NonNullablePattern …
   203→type MergeGuards …
   210→export type Chainable …
   276→export type StringChainable …
   391→export type NumberChainable …
   530→export type BigIntChainable …
   643→export type Variadic …
   645→export type ArrayChainable …

src/types/helpers.ts
     1→export type ValueOf …
     3→export type Values …
     6→ * ### LeastUpperBound
      →…
    14→export type LeastUpperBound …
    16→export type Contains …
    25→export type UnionToIntersection …
    31→export type IsUnion …
    33→export type UnionToTuple …
    42→export type Flatten …
    49→export type Equal …
    55→export type Expect …
    57→export type IsAny …
    59→export type IsNever …
    61→export type Length …
    63→export type Iterator …
    68→export type Next …
    69→export type Prev …
    73→export type Take …
    83→export type Drop …
    92→export type UpdateAt …
   105→export type BuiltInObjects …
   113→export type IsPlainObject …
   122→export type Compute …
   126→export type IntersectObjects …
   138→export type WithDefault …
   140→export type IsLiteral …
   164→export type Primitives …
   173→export type NonLiteralPrimitive …
   175→export type TupleKeys …
   177→export type Union …
   180→ * GuardValue returns the value guarded by a type guard function.
   182→export type GuardValue …
   188→export type GuardFunction …
   192→export type Some …
   196→export type All …
   200→export type Extends …
   202→export type Not …
   204→type AllKeys …
   207→export type MergeUnion …
   217→export type IsFixedSizeTuple …
   220→export type IsTuple …
   227→export type IsStrictArray …
   229→export type IsReadonlyArray …
   235→export type MaybeAddReadonly …
   240→export type MapKey …
   242→export type MapValue …
   244→export type SetValue …
   246→export type RecordKey …
   248→export type RecordValue …
   250→export type ReadonlyArrayValue …
   254→export type ExtractPlainObject …
   260→export type GetKey …
   266→export interface Fn …
   271→export type Call …
   275→export type IsOptionalKeysOf …

src/types/index.ts

scripts/generate-cts.sh

jest.config.cjs
     1→module.exports = { …

package.json

tsconfig.json

docs/roadmap.md

docs/v3-to-v4-migration-guide.md

docs/v4-to-v5-migration-guide.md

benchmarks/package.json

examples/

examples/gif-fetcher/

examples/one-file-demo/

tests/

tests/types-catalog/
