test/snapshots/snapshots__ts_pattern_src_types.snap
---
source: test/fixtures.rs
expression: output
---
BuildMany.ts
     1→import …
     4→export type BuildMany …
    11→type BuildOne …
    19→export type SetDeep …

DeepExclude.ts
     1→import …
     3→export type DeepExclude …

DistributeUnions.ts
     1→import …
     2→import type …
    15→import …
    18→ * DistributeMatchingUnions takes two arguments:
      →…
    41→export type DistributeMatchingUnions …
    46→export type FindUnionsMany …
    63→ * The reason we don't look further down the tree with lists,
      →…
    80→export type FindUnions …
   174→export type ArrayToVariadicUnion …
   183→export type Distribute …

ExtractPreciseValue.ts
     1→import type …
     2→import type …
    13→export type ExtractPreciseValue …
    81→type ExtractPreciseArrayValue …

FindSelected.ts
     1→import type * as symbols from '../internals/symbols'; …
     2→import type …
     3→import type …
    11→type SelectionsRecord …
    13→export type None …
    16→export type Some …
    21→export type SelectionType …
    24→type MapOptional …
    31→type MapList …
    38→type ReduceFindSelectionUnion …
    47→type FindSelectionUnionInArray …
    96→export type FindSelectionUnion …
   159→export type SeveralAnonymousSelectError …
   165→export type MixedNamedAndAnonymousSelectError …
   174→export type SelectionToArgs …
   185→export type Selections …
   191→export type FindSelected …

InvertPattern.ts
     1→import …
     2→import …
    27→import type …
    29→type OptionalKeys …
    39→type ReduceUnion …
    47→type ReduceIntersection …
    55→type InvertArrayPattern …
   102→ * ### InvertPatternInternal
      →…
   106→export type InvertPattern …
   110→type InvertPatternInternal …
   180→export type ReduceIntersectionForExclude …
   192→export type ReduceUnionForExclude …
   204→type ExcludeIfExists …
   231→type InvertArrayPatternForExclude …
   301→ * ### InvertPatternForExclude
   303→export type InvertPatternForExclude …
   307→type InvertPatternForExcludeInternal …

IsMatching.ts
     1→import …
    12→type IsMatchingTuple …
    26→type IsMatchingArray …
    57→export type IsMatching …

Match.ts
     1→import type * as symbols from '../internals/symbols'; …
     2→import type …
     3→import type …
     4→import type …
     5→import type …
     6→import type …
     8→export type PickReturnValue …
    10→interface NonExhaustiveError …
    14→interface TSPatternError …
    19→ * #### Match
      →…
    22→export type Match …
   229→ * Potential for optimization here:
      →…
   245→type DeepExcludeAll …
   251→type MakeTuples …
   256→ * The type of an overloaded function for `.exhaustive`,
      →…
   261→type Exhaustive …

Pattern.ts
     1→import type * as symbols from '../internals/symbols'; …
     2→import …
     3→import …
     4→import …
     5→import …
     7→export type MatcherType …
    23→export type MatcherProtocol …
    38→export type MatchResult …
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
    46→ * which returns an object with a `match()` method, taking
    47→ * the input value and returning whether the pattern matches
    48→ * or not, along with optional selections.
    50→export interface Matcher …
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    71→type PatternMatcher …
    74→export type MatchedValue …
    79→export type AnyMatcher …
    81→type UnknownMatcher …
    83→export type CustomP …
    94→export type ArrayP …
    96→export type RecordP …
   102→export type OptionalP …
   104→export type MapP …
   106→export type SetP …
   108→export type AndP …
   110→export type OrP …
   112→export type NotP …
   114→export type GuardP …
   116→export type GuardExcludeP …
   124→export type SelectP …
   130→export type AnonymousSelectP …
   132→export interface Override …
   136→export type UnknownProperties …
   138→export type UnknownValuePattern …
   147→ * `Pattern<a>` is the generic type for patterns matching a value of type `a`. A pattern can be any (nested) javascript value.
      →…
   157→export type Pattern …
   161→type KnownPattern …
   163→type KnownPatternInternal …
   174→type ObjectPattern …
   180→type ArrayPattern …
   190→export type UnknownPattern …
   191→export type StringPattern …
   192→export type NumberPattern …
   193→export type BooleanPattern …
   194→export type BigIntPattern …
   195→export type SymbolPattern …
   196→export type NullishPattern …
   201→export type NonNullablePattern …
   203→type MergeGuards …
   210→export type Chainable …
   276→export type StringChainable …
   391→export type NumberChainable …
   530→export type BigIntChainable …
   643→export type Variadic …
   645→export type ArrayChainable …

helpers.ts
     1→export type ValueOf …
     3→export type Values …
     6→ * ### LeastUpperBound
      →…
    14→export type LeastUpperBound …
    16→export type Contains …
    25→export type UnionToIntersection …
    31→export type IsUnion …
    33→export type UnionToTuple …
    42→export type Flatten …
    49→export type Equal …
    55→export type Expect …
    57→export type IsAny …
    59→export type IsNever …
    61→export type Length …
    63→export type Iterator …
    68→export type Next …
    69→export type Prev …
    73→export type Take …
    83→export type Drop …
    92→export type UpdateAt …
   105→export type BuiltInObjects …
   113→export type IsPlainObject …
   122→export type Compute …
   126→export type IntersectObjects …
   138→export type WithDefault …
   140→export type IsLiteral …
   164→export type Primitives …
   173→export type NonLiteralPrimitive …
   175→export type TupleKeys …
   177→export type Union …
   180→ * GuardValue returns the value guarded by a type guard function.
   182→export type GuardValue …
   188→export type GuardFunction …
   192→export type Some …
   196→export type All …
   200→export type Extends …
   202→export type Not …
   204→type AllKeys …
   207→export type MergeUnion …
   217→export type IsFixedSizeTuple …
   220→export type IsTuple …
   227→export type IsStrictArray …
   229→export type IsReadonlyArray …
   235→export type MaybeAddReadonly …
   240→export type MapKey …
   242→export type MapValue …
   244→export type SetValue …
   246→export type RecordKey …
   248→export type RecordValue …
   250→export type ReadonlyArrayValue …
   254→export type ExtractPlainObject …
   260→export type GetKey …
   266→export interface Fn …
   271→export type Call …
   275→export type IsOptionalKeysOf …

index.ts
     1→export * from './Pattern';
