test/snapshots/snapshots__typeguard.snap
---
source: test/fixtures.rs
expression: output
---
README.rst

docs/api.rst

docs/extending.rst

docs/features.rst

docs/index.rst

docs/userguide.rst

docs/versionhistory.rst

src/typeguard/__init__.py
    34→config …
    37→def __getattr__ …

src/typeguard/_checkers.py
    81→TypeCheckerCallable …
    84→TypeCheckLookupCallback …
    88→checker_lookup_functions …
    89→generic_alias_types …
    98→# Lifted from mypy.sharedparse
    99→BINARY_MAGIC_METHODS …
   153→def check_callable …
   212→def check_mapping …
   247→def check_typed_dict …
   305→def check_list …
   324→def check_sequence …
   343→def check_set …
   365→def check_tuple …
   423→def check_union …
   447→def check_uniontype …
   474→def check_class …
   536→def check_newtype …
   545→def check_instance …
   555→def check_typevar …
   586→def _is_literal_type(typ: object) -> bool:
   590→def check_literal …
   623→def check_literal_string …
   632→def check_typeguard …
   641→def check_none …
   651→def check_number …
   663→def check_io …
   679→def check_signature_compatible …
   834→def check_protocol …
   885→def check_byteslike …
   895→def check_self …
   915→def check_paramspec …
   924→def check_type_internal(
   925→    value: Any,
   926→    annotation: Any,
   927→    memo: TypeCheckMemo,
   928→) -> None:
   930→    Check that the given object is compatible with the given type annotation.
      →…
  1004→# Equality checks are applied to these
  1005→origin_type_checkers …
  1061→def builtin_checker_lookup …
  1099→def load_plugins() -> None:
  1101→    Load all type checker lookup functions from entry points.
      →…

src/typeguard/_config.py
    11→T …
    14→class ForwardRefPolicy …
    16→    Defines how unresolved forward references are handled.
      →…
    30→class CollectionCheckStrategy …
    32→    Specifies how thoroughly the contents of collections are type checked.
      →…
    52→    def iterate_samples(self, collection: Iterable[T]) -> Iterable[T]:
    63→class TypeCheckConfiguration …
    65→     You can change Typeguard's behavior with these settings.
      →…

src/typeguard/_decorators.py
    24→    def typeguard_ignore(arg: T_CallableOrType) -> T_CallableOrType:
    25→        """This decorator is a noop during static type-checking."""
    32→def make_cell …
    36→def find_target_function …
    56→def instrument …
   137→def typechecked …
   147→def typechecked …
   150→def typechecked(
   151→    target: T_CallableOrType | None = None,
   152→    *,
   153→    forward_ref_policy: ForwardRefPolicy | Unset = unset,
   154→    typecheck_fail_callback: TypeCheckFailCallback | Unset = unset,
   155→    collection_check_strategy: CollectionCheckStrategy | Unset = unset,
   156→    debug_instrumentation: bool | Unset = unset,
   157→) -> Any:
   159→    Instrument the target function to perform run-time type checking.
      →…

src/typeguard/_exceptions.py
     5→class TypeHintWarning …
     7→    A warning that is emitted when a type hint in string form could not be resolved to
      →…
    12→class TypeCheckWarning …
    13→    """Emitted by typeguard's type checkers when a type mismatch is detected."""
    15→    def __init__(self, message: str):
    19→class InstrumentationWarning …
    20→    """Emitted when there's a problem with instrumenting a function for type checks."""
    22→    def __init__(self, message: str):
    26→class TypeCheckError …
    28→    Raised by typeguard's type checkers when a type mismatch is detected.
    31→    def __init__(self, message: str):
    35→    def append_path_element(self, element: str) -> None:
    38→    def __str__(self) -> str:

src/typeguard/_functions.py
    24→T …
    25→TypeCheckFailCallback …
    29→def check_type …
    40→def check_type …
    50→def check_type(
    51→    value: object,
    52→    expected_type: Any,
    53→    *,
    54→    forward_ref_policy: ForwardRefPolicy = TypeCheckConfiguration().forward_ref_policy,
    55→    typecheck_fail_callback: TypeCheckFailCallback | None = (
    56→        TypeCheckConfiguration().typecheck_fail_callback
    57→    ),
    58→    collection_check_strategy: CollectionCheckStrategy = (
    59→        TypeCheckConfiguration().collection_check_strategy
    60→    ),
    61→) -> Any:
    63→    Ensure that ``value`` matches ``expected_type``.
      →…
   118→def check_argument_types …
   149→def check_return_type …
   185→def check_send_type …
   216→def check_yield_type …
   245→def check_variable_assignment …
   291→def warn_on_error(exc: TypeCheckError, memo: TypeCheckMemo) -> None:
   293→    Emit a warning on a type mismatch.
      →…

src/typeguard/_importhook.py
    40→P …
    41→T …
    44→# The name of this function is magical
    45→def _call_with_frames_removed(
    46→    f: Callable[P, T], *args: P.args, **kwargs: P.kwargs
    47→) -> T:
    48→    return f(*args, **kwargs)
    51→def optimized_cache_from_source …
    55→class TypeguardLoader …
    57→    def source_to_code(
    58→        data: Buffer | str | ast.Module | ast.Expression | ast.Interactive,
    59→        path: Buffer | str | PathLike[str] = "<string>",
    60→        *,
    61→        _optimize: int = -1,
    62→    ) -> CodeType:
    99→    def exec_module(self, module: ModuleType) -> None:
   109→class TypeguardFinder …
   111→    Wraps another path finder and instruments the module with
      →…
   120→    def __init__(self, packages: list[str] | None, original_pathfinder: MetaPathFinder):
   124→    def find_spec(
   125→        self,
   126→        fullname: str,
   127→        path: Sequence[str] | None,
   128→        target: types.ModuleType | None = None,
   129→    ) -> ModuleSpec | None:
   138→    def should_instrument(self, module_name: str) -> bool:
   140→        Determine whether the module with the given name should be instrumented.
   141→
   142→        :param module_name: full name of the module that is about to be imported (e.g.
   143→            ``xyz.abc``)
   144→
   156→class ImportHookManager …
   158→    A handle that can be used to uninstall the Typeguard import hook.
   161→    def __init__(self, hook: MetaPathFinder):
   164→    def __enter__(self) -> None:
   167→    def __exit__(
   168→        self,
   169→        exc_type: type[BaseException],
   170→        exc_val: BaseException,
   171→        exc_tb: TracebackType,
   172→    ) -> None:
   175→    def uninstall(self) -> None:
   176→        """Uninstall the import hook."""
   183→def install_import_hook(
   184→    packages: Iterable[str] | None = None,
   185→    *,
   186→    cls: type[TypeguardFinder] = TypeguardFinder,
   187→) -> ImportHookManager:
   189→    Install an import hook that instruments functions for automatic type checking.
      →…

src/typeguard/_memo.py
     8→class TypeCheckMemo …
    10→    Contains information necessary for type checkers to do their work.
      →…
    37→    def __init__(
    38→        self,
    39→        globals: dict[str, Any],
    40→        locals: dict[str, Any],
    41→        *,
    42→        self_type: type | None = None,
    43→        config: TypeCheckConfiguration = global_config,
    44→    ):

src/typeguard/_pytest_plugin.py
    16→def pytest_addoption …
    75→def pytest_configure …

src/typeguard/_suppression.py
    15→P …
    16→T …
    23→def suppress_type_checks …
    27→def suppress_type_checks …
    30→def suppress_type_checks(
    31→    func: Callable[P, T] | None = None,
    32→) -> Callable[P, T] | ContextManager[None]:
    34→    Temporarily suppress all type checking.
      →…

src/typeguard/_transformer.py
    67→PreliminaryNameTypePair …
    68→NameTypePair …
   118→class TransformMemo …
   141→    def __post_init__(self) -> None:
   171→    def get_unused_name(self, name: str) -> str:
   183→    def is_ignored_name(self, expression: expr | Expr | None) -> bool:
   206→    def get_memo_name(self) -> Name:
   212→    def get_import(self, module: str, name: str) -> Name:
   225→    def insert_imports(self, node: Module | FunctionDef | AsyncFunctionDef) -> None:
   226→        """Insert imports needed by injected code."""
   238→    def name_matches(self, expression: expr | Expr | None, *names: str) -> bool:
   275→    def get_config_keywords(self) -> list[keyword]:
   285→class NameCollector …
   286→    def __init__(self) -> None:
   289→    def visit_Import(self, node: Import) -> None:
   293→    def visit_ImportFrom(self, node: ImportFrom) -> None:
   297→    def visit_Assign(self, node: Assign) -> None:
   302→    def visit_NamedExpr(self, node: NamedExpr) -> Any:
   306→    def visit_FunctionDef(self, node: FunctionDef) -> None:
   309→    def visit_ClassDef(self, node: ClassDef) -> None:
   313→class GeneratorDetector …
   314→    """Detects if a function node is a generator function."""
   319→    def visit_Yield(self, node: Yield) -> Any:
   322→    def visit_YieldFrom(self, node: YieldFrom) -> Any:
   325→    def visit_ClassDef(self, node: ClassDef) -> Any:
   328→    def visit_FunctionDef(self, node: FunctionDef | AsyncFunctionDef) -> Any:
   334→    def visit_AsyncFunctionDef(self, node: AsyncFunctionDef) -> Any:
   338→class AnnotationTransformer …
   347→    def __init__(self, transformer: TypeguardTransformer):
   352→    def visit(self, node: AST) -> Any:
   374→    def visit_BinOp(self, node: BinOp) -> Any:
   401→    def visit_Attribute(self, node: Attribute) -> Any:
   407→    def visit_Subscript(self, node: Subscript) -> Any:
   466→    def visit_Name(self, node: Name) -> Any:
   472→    def visit_Call(self, node: Call) -> Any:
   476→    def visit_Constant(self, node: Constant) -> Any:
   488→class TypeguardTransformer …
   489→    def __init__(
   490→        self, target_path: Sequence[str] | None = None, target_lineno: int | None = None
   491→    ) -> None:
   498→    def generic_visit(self, node: AST) -> AST:
   517→    def _use_memo …
   570→    def _get_import …
   575→    def _convert_annotation …
   578→    def _convert_annotation …
   580→    def _convert_annotation …
   596→    def visit_Name(self, node: Name) -> Name:
   600→    def visit_Module(self, node: Module) -> Module:
   608→    def visit_Import(self, node: Import) -> Import:
   615→    def visit_ImportFrom(self, node: ImportFrom) -> ImportFrom:
   624→    def visit_ClassDef(self, node: ClassDef) -> ClassDef | None:
   650→    def visit_FunctionDef(
   651→        self, node: FunctionDef | AsyncFunctionDef
   652→    ) -> FunctionDef | AsyncFunctionDef | None:
   654→        Injects type checks for function arguments, and for a return of None if the
   655→        function is annotated to return something else than Any or None, and the body
   656→        ends without an explicit "return".
   657→
   913→    def visit_AsyncFunctionDef(
   914→        self, node: AsyncFunctionDef
   915→    ) -> FunctionDef | AsyncFunctionDef | None:
   918→    def visit_Return(self, node: Return) -> Return:
   919→        """This injects type checks into "return" statements."""
   945→    def visit_Yield(self, node: Yield) -> Yield | Call:
   947→        This injects type checks into "yield" expressions, checking both the yielded
   948→        value and the value sent back to the generator, when appropriate.
   949→
   994→    def visit_AnnAssign(self, node: AnnAssign) -> Any:
   996→        This injects a type check into a local variable annotation-assignment within a
   997→        function body.
   998→
  1036→    def visit_Assign(self, node: Assign) -> Any:
  1038→        This injects a type check into a local variable assignment within a function
  1039→        body. The variable must have been annotated earlier in the function body.
  1040→
  1138→    def visit_NamedExpr(self, node: NamedExpr) -> Any:
  1139→        """This injects a type check into an assignment expression (a := foo())."""
  1181→    def visit_AugAssign(self, node: AugAssign) -> Any:
  1183→        This injects a type check into an augmented assignment expression (a += 1).
  1184→
  1224→    def visit_If(self, node: If) -> Any:
  1226→        This blocks names from being collected from a module-level
  1227→        "if typing.TYPE_CHECKING:" block, so that they won't be type checked.
  1228→

src/typeguard/_utils.py
    25→    def evaluate_forwardref …
    42→    def evaluate_forwardref …
    48→    def evaluate_forwardref …
    66→def get_type_name …
   104→def qualified_name(obj: Any, *, add_class_prefix: bool = False) -> str:
   106→    Return the qualified name (e.g. package.module.Type) for the given object.
      →…
   127→def function_name(func: Callable[..., Any]) -> str:
   129→    Return the qualified name of the given function.
      →…
   142→def resolve_reference …
   154→def is_method_of …
   162→def get_stacklevel …
   173→class Unset …
   176→    def __repr__(self) -> str:

src/typeguard/py.typed

docs/conf.py

pyproject.toml
     1→[build-system]
     8→[project]
    33→[project.urls]
    39→[project.entry-points]
    42→[dependency-groups]
    58→[tool.setuptools_scm]
    78→[tool.ruff]
    99→[tool.mypy]
   105→[tool.tox]

tests/__init__.py
    24→class Employee …
    34→class FooGeneric …
    38→class Parent …
    42→class Child …

tests/conftest.py

tests/deferredannos.py
     9→class NotYetDefined …

tests/dummymodule.py
     1→"""Module docstring."""
    40→T …
    41→P …
    72→class Metaclass …
    77→class DummyClass …
   118→class Outer …
   305→class OverrideClass …
   359→def never_called …
   360→    """Regression test for #335."""
   365→class ModuleLocalClass …
   369→class TypedDictWithForwardRef …

tests/dummymodule_py312.py
    17→class ParametrizedClass …

src/

tests/mypy/
